--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -152,8 +152,8 @@
     "                      fam_file,\n",
     "                      outcome,\n",
     "                      outcome_iid,\n",
-    "                      a_min=100.,\n",
-    "                      a_max=250.,\n",
+    "                      a_min=1.2345654321,\n",
+    "                      a_max=2.34565432,\n",
     "                      N=500):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
@@ -167,6 +167,10 @@
     "                                      gene_iid,\n",
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
+    "    if a_min == 1.2345654321:\n",
+    "        a_min = _np.min(outcome) - _np.std(outcome)\n",
+    "    if a_max == 2.34565432:\n",
+    "        a_max = _np.max(outcome) + _np.std(outcome)\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
@@ -220,8 +224,8 @@
     "                               fam_file,\n",
     "                               outcome,\n",
     "                               outcome_iid,\n",
-    "                               a_min=100.,\n",
-    "                               a_max=250.,\n",
+    "                               a_min=1.2345654321,\n",
+    "                               a_max=2.34565432,\n",
     "                               N=500,\n",
     "                               chunck_size=60000):\n",
     "    \"\"\"\n",
@@ -236,6 +240,10 @@
     "                                      gene_iid,\n",
     "                                      assume_unique=True,\n",
     "                                      return_indices=True)[1]]\n",
+    "    if a_min == 1.2345654321:\n",
+    "        a_min = _np.min(outcome) - _np.std(outcome)\n",
+    "    if a_max == 2.34565432:\n",
+    "        a_max = _np.max(outcome) + _np.std(outcome)\n",
     "    # get genetic indices\n",
     "    gene_ind = _np.intersect1d(gene_iid,\n",
     "                               outcome_iid,\n",
@@ -511,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
