--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -21,6 +21,9 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
     "import numpy as _np\n",
     "#from bgen_reader import open_bgen\n",
     "#from os.path import join\n",
