--- a/logistic_SCAD_MCP_cp_MODULE.ipynb
+++ b/logistic_SCAD_MCP_cp_MODULE.ipynb
@@ -18,6 +18,9 @@
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
     "# import os, sys\n",
     "# import collections\n",
     "# import numpy as np\n",
