--- a/LM_SCAD_MCP_np_MODULE.ipynb
+++ b/LM_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:36:22.834510Z",
-     "start_time": "2022-08-09T00:36:22.661423Z"
+     "end_time": "2022-08-09T22:53:33.915682Z",
+     "start_time": "2022-08-09T22:53:33.680797Z"
     }
    },
    "outputs": [],
@@ -53,8 +53,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:36:22.983748Z",
-     "start_time": "2022-08-09T00:36:22.835826Z"
+     "end_time": "2022-08-09T22:53:34.112765Z",
+     "start_time": "2022-08-09T22:53:33.917198Z"
     }
    },
    "outputs": [],
@@ -207,8 +207,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:36:23.031346Z",
-     "start_time": "2022-08-09T00:36:22.984965Z"
+     "end_time": "2022-08-09T22:53:34.182666Z",
+     "start_time": "2022-08-09T22:53:34.114455Z"
     }
    },
    "outputs": [],
@@ -750,29 +750,11 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:36:52.338684Z",
-     "start_time": "2022-08-09T00:36:23.146239Z"
+     "end_time": "2022-08-09T22:57:07.144466Z",
+     "start_time": "2022-08-09T22:53:34.431825Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1167059/1232748080.py:499: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _lambda_max = lambda_max_LM(_design_matrix, outcome)\n",
-      "/tmp/ipykernel_1167059/1232748080.py:499: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\n",
-      "  _lambda_max = lambda_max_LM(_design_matrix, outcome)\n",
-      "/tmp/ipykernel_1167059/1232748080.py:503: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _elim = _strong_rule_seq_LM(X=_design_matrix,\n",
-      "/tmp/ipykernel_1167059/1232748080.py:503: NumbaPerformanceWarning: \u001b[1m\u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\u001b[0m\u001b[0m\u001b[0m\n",
-      "  _elim = _strong_rule_seq_LM(X=_design_matrix,\n",
-      "/tmp/ipykernel_1167059/1232748080.py:503: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 1d, C), array(float64, 2d, A))\u001b[0m\u001b[0m\n",
-      "  _elim = _strong_rule_seq_LM(X=_design_matrix,\n",
-      "/tmp/ipykernel_1167059/1232748080.py:503: NumbaPerformanceWarning: \u001b[1m\u001b[1m'@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\u001b[0m\u001b[0m\n",
-      "  _elim = _strong_rule_seq_LM(X=_design_matrix,\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -790,7 +772,7 @@
       "  -8.95442224e-02  0.00000000e+00]\n",
       " [ 1.25529526e+00  1.86767007e+00 -1.90691276e+00 ...  1.00662533e-01\n",
       "  -9.61300285e-02  1.36140337e-04]]\n",
-      "1.81 s ± 34.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "28.2 s ± 8.24 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -845,8 +827,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:37:08.885385Z",
-     "start_time": "2022-08-09T00:36:52.339935Z"
+     "end_time": "2022-08-09T22:58:15.471590Z",
+     "start_time": "2022-08-09T22:57:07.147718Z"
     },
     "code_folding": []
    },
@@ -896,8 +878,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:37:10.496544Z",
-     "start_time": "2022-08-09T00:37:08.886624Z"
+     "end_time": "2022-08-09T22:58:27.973072Z",
+     "start_time": "2022-08-09T22:58:15.472951Z"
     }
    },
    "outputs": [
@@ -905,7 +887,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "196 ms ± 3.65 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.55 s ± 165 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -918,8 +900,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:37:10.502236Z",
-     "start_time": "2022-08-09T00:37:10.498343Z"
+     "end_time": "2022-08-09T22:58:27.984887Z",
+     "start_time": "2022-08-09T22:58:27.977567Z"
     }
    },
    "outputs": [
@@ -945,8 +927,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:37:10.626099Z",
-     "start_time": "2022-08-09T00:37:10.503431Z"
+     "end_time": "2022-08-09T22:58:28.142013Z",
+     "start_time": "2022-08-09T22:58:27.988741Z"
     },
     "scrolled": true
    },
@@ -993,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
