--- a/logistic_SCAD_MCP_cp_MODULE.ipynb
+++ b/logistic_SCAD_MCP_cp_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:31:01.272509Z",
-     "start_time": "2022-07-20T22:31:01.098535Z"
+     "end_time": "2022-08-09T22:53:37.498367Z",
+     "start_time": "2022-08-09T22:53:37.267875Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:31:01.283146Z",
-     "start_time": "2022-07-20T22:31:01.273821Z"
+     "end_time": "2022-08-09T22:53:37.511969Z",
+     "start_time": "2022-08-09T22:53:37.499971Z"
     }
    },
    "outputs": [],
@@ -221,8 +221,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:31:01.597231Z",
-     "start_time": "2022-07-20T22:31:01.351756Z"
+     "end_time": "2022-08-09T22:53:37.982964Z",
+     "start_time": "2022-08-09T22:53:37.655085Z"
     }
    },
    "outputs": [],
@@ -754,22 +754,11 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:31:09.983270Z",
-     "start_time": "2022-07-20T22:31:01.598833Z"
+     "end_time": "2022-08-09T22:53:44.091648Z",
+     "start_time": "2022-08-09T22:53:37.984403Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_distributions.py:477: FutureWarning: cupy.random.multivariate_normal is experimental. The interface can change in the future.\n",
-      "  _util.experimental('cupy.random.multivariate_normal')\n",
-      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/cupy/random/_generator.py:329: FutureWarning: cupy.random.RandomState.multivariate_normal is experimental. The interface can change in the future.\n",
-      "  _util.experimental('cupy.random.RandomState.multivariate_normal')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cupy as cp\n",
@@ -820,8 +809,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:32:01.956652Z",
-     "start_time": "2022-07-20T22:31:09.984682Z"
+     "end_time": "2022-08-09T22:54:24.834591Z",
+     "start_time": "2022-08-09T22:53:44.093218Z"
     }
    },
    "outputs": [
@@ -829,8 +818,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188 ms ± 18.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "6.22 s ± 1.27 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "544 ms ± 7.33 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "4.54 s ± 83.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -844,8 +833,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:32:01.962120Z",
-     "start_time": "2022-07-20T22:32:01.957907Z"
+     "end_time": "2022-08-09T22:54:24.840719Z",
+     "start_time": "2022-08-09T22:54:24.835957Z"
     }
    },
    "outputs": [
@@ -900,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
