--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,20 +6,11 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-07T23:27:42.120875Z",
-     "start_time": "2022-08-07T23:27:41.689384Z"
+     "end_time": "2022-08-09T22:54:01.325723Z",
+     "start_time": "2022-08-09T22:54:00.624970Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
@@ -52,8 +43,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-07T23:27:42.142641Z",
-     "start_time": "2022-08-07T23:27:42.122282Z"
+     "end_time": "2022-08-09T22:54:01.360585Z",
+     "start_time": "2022-08-09T22:54:01.327731Z"
     }
    },
    "outputs": [],
@@ -330,8 +321,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-07T23:27:42.154582Z",
-     "start_time": "2022-08-07T23:27:42.143565Z"
+     "end_time": "2022-08-09T22:54:01.370508Z",
+     "start_time": "2022-08-09T22:54:01.361981Z"
     }
    },
    "outputs": [
@@ -339,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.002529736056201149\n"
+      "0.014053215327510242\n"
      ]
     }
    ],
@@ -357,8 +348,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-07T23:27:53.605846Z",
-     "start_time": "2022-08-07T23:27:42.155985Z"
+     "end_time": "2022-08-09T22:54:25.334516Z",
+     "start_time": "2022-08-09T22:54:01.372477Z"
     }
    },
    "outputs": [
@@ -374,10 +365,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47695349, 0.12443565, 0.135269  , 0.00091694, 0.00206842,\n",
-       "       0.00115005, 0.00096158, 0.00175658, 0.0013687 , 0.00114087,\n",
-       "       0.00178697, 0.00124353, 0.00144796, 0.00145016, 0.0016113 ,\n",
-       "       0.00192926, 0.0016664 , 0.0017184 , 0.00202365, 0.00106484])"
+       "array([0.47783271, 0.12487406, 0.13425855, 0.00094485, 0.00209743,\n",
+       "       0.00114863, 0.00096992, 0.00167731, 0.00123907, 0.00122713,\n",
+       "       0.0016312 , 0.00139877, 0.00155391, 0.0016081 , 0.00166292,\n",
+       "       0.00180814, 0.00140251, 0.00176672, 0.00185609, 0.00107367])"
       ]
      },
      "execution_count": 4,
@@ -426,8 +417,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-07T23:27:57.536800Z",
-     "start_time": "2022-08-07T23:27:53.606874Z"
+     "end_time": "2022-08-09T22:54:31.988099Z",
+     "start_time": "2022-08-09T22:54:25.337036Z"
     }
    },
    "outputs": [
@@ -441,23 +432,13 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_346162/1621196534.py:84: RuntimeWarning: divide by zero encountered in log\n",
-      "  __ = joint * _np.log(_)\n",
-      "/tmp/ipykernel_346162/1621196534.py:84: RuntimeWarning: invalid value encountered in multiply\n",
-      "  __ = joint * _np.log(_)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([1.14013325e-01, 3.64837028e-02, 5.13765938e-02, 5.17590746e-05,\n",
-       "       3.65130961e-04, 4.87922518e-04, 1.31011285e-04, 8.32624405e-04,\n",
-       "       9.87081183e-05, 3.09522735e-04, 9.33283832e-05, 1.18945496e-05,\n",
-       "       1.51177914e-04, 4.44415514e-04, 2.17526318e-05, 1.86222910e-04,\n",
-       "       5.91537971e-05, 3.95119777e-04, 1.76071670e-04, 5.93391529e-04])"
+       "array([1.12072034e-01, 3.73770418e-02, 4.64183131e-02, 1.10101854e-05,\n",
+       "       3.55559156e-04, 2.82179431e-04, 3.96116739e-04, 1.37266940e-04,\n",
+       "       1.48862765e-04, 3.07838542e-04, 1.27638487e-04, 2.00971493e-04,\n",
+       "       6.67553629e-04, 1.25686193e-04, 1.23008505e-05, 2.31152029e-05,\n",
+       "       5.19983996e-05, 5.48756269e-04, 5.60977307e-04, 5.17228214e-04])"
       ]
      },
      "execution_count": 5,
@@ -522,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
