--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:54:01.325723Z",
-     "start_time": "2022-08-09T22:54:00.624970Z"
+     "end_time": "2022-10-30T19:28:38.833521Z",
+     "start_time": "2022-10-30T19:28:38.395958Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:54:01.360585Z",
-     "start_time": "2022-08-09T22:54:01.327731Z"
+     "end_time": "2022-10-30T19:28:38.854910Z",
+     "start_time": "2022-10-30T19:28:38.834889Z"
     }
    },
    "outputs": [],
@@ -221,10 +221,16 @@
     "                               a_min=1.2345654321,\n",
     "                               a_max=2.34565432,\n",
     "                               N=500,\n",
-    "                               chunck_size=60000):\n",
+    "                               core_num=\"NOT DECLARED\"):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed1 = _open_bed(filepath=bed_file,\n",
     "                     fam_filepath=fam_file,\n",
     "                     bim_filepath=bim_file)\n",
@@ -262,10 +268,9 @@
     "\n",
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
-    "    n_slices = _np.ceil(len(ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        MI_UKBB = pl.map(_continuous_filter_slice,\n",
-    "                         _np.array_split(ind, n_slices))\n",
+    "                         _np.array_split(ind, core_num))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
@@ -275,10 +280,16 @@
     "                           fam_file,\n",
     "                           outcome,\n",
     "                           outcome_iid,\n",
-    "                           chunck_size=60000):\n",
+    "                           core_num=\"NOT DECLARED\"):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed1 = _open_bed(filepath=bed_file,\n",
     "                     fam_filepath=fam_file,\n",
     "                     bim_filepath=bim_file)\n",
@@ -308,9 +319,8 @@
     "\n",
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
-    "    n_slices = _np.ceil(len(ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, n_slices))\n",
+    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, core_num))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB"
    ]
@@ -321,8 +331,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:54:01.370508Z",
-     "start_time": "2022-08-09T22:54:01.361981Z"
+     "end_time": "2022-10-30T19:28:38.865276Z",
+     "start_time": "2022-10-30T19:28:38.855962Z"
     }
    },
    "outputs": [
@@ -330,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.014053215327510242\n"
+      "0.002282832735455329\n"
      ]
     }
    ],
@@ -348,8 +358,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:54:25.334516Z",
-     "start_time": "2022-08-09T22:54:01.372477Z"
+     "end_time": "2022-10-30T19:28:46.232541Z",
+     "start_time": "2022-10-30T19:28:38.866611Z"
     }
    },
    "outputs": [
@@ -365,10 +375,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47783271, 0.12487406, 0.13425855, 0.00094485, 0.00209743,\n",
-       "       0.00114863, 0.00096992, 0.00167731, 0.00123907, 0.00122713,\n",
-       "       0.0016312 , 0.00139877, 0.00155391, 0.0016081 , 0.00166292,\n",
-       "       0.00180814, 0.00140251, 0.00176672, 0.00185609, 0.00107367])"
+       "array([0.47708376, 0.12529111, 0.13467124, 0.0008146 , 0.00202193,\n",
+       "       0.0011832 , 0.00102885, 0.00179426, 0.00128751, 0.00119051,\n",
+       "       0.00181184, 0.00133224, 0.00140396, 0.00152705, 0.00162856,\n",
+       "       0.00198566, 0.00144003, 0.00179135, 0.00177209, 0.00115459])"
       ]
      },
      "execution_count": 4,
@@ -405,8 +415,7 @@
     "                                           a_min=np.min(outcome) - 10,\n",
     "                                           a_max=np.max(outcome) + 10,\n",
     "                                           outcome=outcome,\n",
-    "                                           outcome_iid=outcome_iid,\n",
-    "                                           chunck_size=1000)\n",
+    "                                           outcome_iid=outcome_iid)\n",
     "\n",
     "MI_continuous[:20]"
    ]
@@ -417,8 +426,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:54:31.988099Z",
-     "start_time": "2022-08-09T22:54:25.337036Z"
+     "end_time": "2022-10-30T19:28:48.594679Z",
+     "start_time": "2022-10-30T19:28:46.233566Z"
     }
    },
    "outputs": [
@@ -434,11 +443,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.12072034e-01, 3.73770418e-02, 4.64183131e-02, 1.10101854e-05,\n",
-       "       3.55559156e-04, 2.82179431e-04, 3.96116739e-04, 1.37266940e-04,\n",
-       "       1.48862765e-04, 3.07838542e-04, 1.27638487e-04, 2.00971493e-04,\n",
-       "       6.67553629e-04, 1.25686193e-04, 1.23008505e-05, 2.31152029e-05,\n",
-       "       5.19983996e-05, 5.48756269e-04, 5.60977307e-04, 5.17228214e-04])"
+       "array([1.14135488e-01, 3.62455567e-02, 4.55377660e-02, 1.40044248e-04,\n",
+       "       9.15024265e-05, 1.30478772e-03, 3.54365547e-04, 8.61360205e-04,\n",
+       "       2.31387258e-04, 1.89852252e-04, 4.39520118e-04, 1.88144737e-05,\n",
+       "       1.67596763e-04, 7.88869900e-05, 2.11877842e-04, 2.07161596e-05,\n",
+       "       2.46363531e-04, 4.27520945e-05, 1.81973029e-06, 2.72887178e-04])"
       ]
      },
      "execution_count": 5,
@@ -472,8 +481,7 @@
     "                                   bim_file=bim_file,\n",
     "                                   fam_file=fam_file,\n",
     "                                   outcome=outcome,\n",
-    "                                   outcome_iid=outcome_iid,\n",
-    "                                   chunck_size=1000)\n",
+    "                                   outcome_iid=outcome_iid)\n",
     "\n",
     "MI_binary[:20]"
    ]
