--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -228,9 +228,10 @@
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
-    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "        assert core_num <= _mp.cpu_count(\n",
+    "        ), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
     "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
-    "    \n",
+    "\n",
     "    bed1 = _open_bed(filepath=bed_file,\n",
     "                     fam_filepath=fam_file,\n",
     "                     bim_filepath=bim_file)\n",
@@ -287,9 +288,10 @@
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
-    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "        assert core_num <= _mp.cpu_count(\n",
+    "        ), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
     "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
-    "    \n",
+    "\n",
     "    bed1 = _open_bed(filepath=bed_file,\n",
     "                     fam_filepath=fam_file,\n",
     "                     bim_filepath=bim_file)\n",
