--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T20:05:50.378954Z",
-     "start_time": "2022-10-30T20:05:49.913240Z"
+     "end_time": "2022-10-31T00:04:22.621054Z",
+     "start_time": "2022-10-31T00:04:22.106153Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T20:05:50.399730Z",
-     "start_time": "2022-10-30T20:05:50.380299Z"
+     "end_time": "2022-10-31T00:04:22.643283Z",
+     "start_time": "2022-10-31T00:04:22.622584Z"
     }
    },
    "outputs": [],
@@ -221,7 +221,7 @@
     "                               a_min=1.2345654321,\n",
     "                               a_max=2.34565432,\n",
     "                               N=500,\n",
-    "                               core_num=\"NOT DECLARED\"):\n",
+    "                               core_num=\"NOT DECLARED\", multp=1):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -269,9 +269,9 @@
     "\n",
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
-    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "    with _mp.Pool(core_num) as pl:\n",
     "        MI_UKBB = pl.map(_continuous_filter_slice,\n",
-    "                         _np.array_split(ind, core_num))\n",
+    "                         _np.array_split(ind, core_num*multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
@@ -281,7 +281,7 @@
     "                           fam_file,\n",
     "                           outcome,\n",
     "                           outcome_iid,\n",
-    "                           core_num=\"NOT DECLARED\"):\n",
+    "                           core_num=\"NOT DECLARED\", multp=1):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -321,8 +321,8 @@
     "\n",
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
-    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, core_num))\n",
+    "    with _mp.Pool(core_num) as pl:\n",
+    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, core_num*multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB"
    ]
@@ -333,8 +333,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T20:05:50.423443Z",
-     "start_time": "2022-10-30T20:05:50.400678Z"
+     "end_time": "2022-10-31T00:04:22.666799Z",
+     "start_time": "2022-10-31T00:04:22.644379Z"
     }
    },
    "outputs": [
@@ -342,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0025921059328059253\n"
+      "0.007140152972281857\n"
      ]
     }
    ],
@@ -360,8 +360,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T20:05:57.392676Z",
-     "start_time": "2022-10-30T20:05:50.424825Z"
+     "end_time": "2022-10-31T00:04:29.872830Z",
+     "start_time": "2022-10-31T00:04:22.667891Z"
     }
    },
    "outputs": [
@@ -377,10 +377,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47832766, 0.12439764, 0.13452314, 0.00103445, 0.00225079,\n",
-       "       0.00109941, 0.00123352, 0.0016189 , 0.00137831, 0.00119457,\n",
-       "       0.00168563, 0.0014858 , 0.00162034, 0.00146881, 0.00171645,\n",
-       "       0.00192261, 0.0013928 , 0.00195522, 0.00192342, 0.00099815])"
+       "array([0.47923763, 0.12481128, 0.13393157, 0.00093546, 0.00211379,\n",
+       "       0.00123727, 0.00108322, 0.00156604, 0.00126114, 0.00132691,\n",
+       "       0.00191306, 0.00143332, 0.00146735, 0.00147227, 0.00165321,\n",
+       "       0.00212987, 0.00139938, 0.00192511, 0.00181196, 0.00108823])"
       ]
      },
      "execution_count": 4,
@@ -417,7 +417,7 @@
     "                                           a_min=np.min(outcome) - 10,\n",
     "                                           a_max=np.max(outcome) + 10,\n",
     "                                           outcome=outcome,\n",
-    "                                           outcome_iid=outcome_iid)\n",
+    "                                           outcome_iid=outcome_iid, multp=2)\n",
     "\n",
     "MI_continuous[:20]"
    ]
@@ -428,8 +428,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T20:05:59.639218Z",
-     "start_time": "2022-10-30T20:05:57.393626Z"
+     "end_time": "2022-10-31T00:04:32.357942Z",
+     "start_time": "2022-10-31T00:04:29.876030Z"
     }
    },
    "outputs": [
@@ -445,11 +445,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.20161147e-01, 4.07846593e-02, 4.31977501e-02, 1.46856018e-04,\n",
-       "       1.92694174e-04, 9.46068667e-06, 7.66388376e-04, 9.00683132e-04,\n",
-       "       3.21885411e-04, 2.20790238e-04, 5.36272227e-05, 2.16761794e-04,\n",
-       "       2.12857411e-04, 1.62997124e-04, 8.89599095e-05, 6.13481261e-05,\n",
-       "       3.12531876e-04, 6.49486915e-06, 2.59436350e-04, 2.57592900e-04])"
+       "array([1.21430381e-01, 4.09966060e-02, 4.34232616e-02, 6.27044737e-05,\n",
+       "       1.38375618e-04, 5.55619437e-04, 8.70274304e-04, 1.31588896e-04,\n",
+       "       4.46058778e-05, 1.69411515e-04, 2.59562423e-04, 6.13916647e-05,\n",
+       "       3.80584361e-04, 7.45936705e-04, 1.25311417e-04, 1.20553506e-04,\n",
+       "       5.88989230e-05, 3.21691128e-04, 7.03425187e-05, 1.44295497e-04])"
       ]
      },
      "execution_count": 5,
