--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -221,7 +221,8 @@
     "                               a_min=1.2345654321,\n",
     "                               a_max=2.34565432,\n",
     "                               N=500,\n",
-    "                               core_num=\"NOT DECLARED\", multp=1):\n",
+    "                               core_num=\"NOT DECLARED\",\n",
+    "                               multp=1):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -271,7 +272,7 @@
     "    ind = _np.arange(len(bed1_sid))\n",
     "    with _mp.Pool(core_num) as pl:\n",
     "        MI_UKBB = pl.map(_continuous_filter_slice,\n",
-    "                         _np.array_split(ind, core_num*multp))\n",
+    "                         _np.array_split(ind, core_num * multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
@@ -281,7 +282,8 @@
     "                           fam_file,\n",
     "                           outcome,\n",
     "                           outcome_iid,\n",
-    "                           core_num=\"NOT DECLARED\", multp=1):\n",
+    "                           core_num=\"NOT DECLARED\",\n",
+    "                           multp=1):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -322,7 +324,8 @@
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
     "    with _mp.Pool(core_num) as pl:\n",
-    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, core_num*multp))\n",
+    "        MI_UKBB = pl.map(_binary_filter_slice,\n",
+    "                         _np.array_split(ind, core_num * multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB"
    ]
@@ -417,7 +420,8 @@
     "                                           a_min=np.min(outcome) - 10,\n",
     "                                           a_max=np.max(outcome) + 10,\n",
     "                                           outcome=outcome,\n",
-    "                                           outcome_iid=outcome_iid, multp=2)\n",
+    "                                           outcome_iid=outcome_iid,\n",
+    "                                           multp=2)\n",
     "\n",
     "MI_continuous[:20]"
    ]
