--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -33,6 +33,7 @@
     "# import matplotlib.pyplot as plt\n",
     "# from scipy.stats import gaussian_kde\n",
     "from KDEpy import FFTKDE as _FFTKDE\n",
+    "import pandas as _pd\n",
     "# from pybgen import PyBGEN\n",
     "import multiprocess as _mp"
    ]
@@ -49,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "def _MI_continuous(a, b, a_min, a_max, N=500):\n",
+    "def _MI_continuous_SNP(a, b, a_min, a_max, N=500):\n",
     "    \"\"\"\n",
     "    calculate mutual information between continuous outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -77,6 +78,13 @@
     "    if _np.sum(_b2) > 2:\n",
     "        y_cond_p2 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b2])\n",
     "\n",
+    "def _MI_bivariate_continuous():\n",
+    "    pass\n",
+    "    return \n",
+    "\n",
+    "def _MI_binary_continuous():\n",
+    "    pass\n",
+    "    return \n",
     "\n",
     "#         y_cond_p2 = gaussian_kde(a[_b2])\n",
     "    else:\n",
@@ -104,7 +112,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "def _MI_binary(a, b):\n",
+    "def _MI_binary_SNP(a, b):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -141,7 +149,7 @@
     "\n",
     "\n",
     "# outcome_iid should be a  list of strings for identifiers\n",
-    "def continuous_filter(bed_file,\n",
+    "def continuous_filter_plink(bed_file,\n",
     "                      bim_file,\n",
     "                      fam_file,\n",
     "                      outcome,\n",
@@ -176,7 +184,7 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        MI_UKBB[j] = _MI_continuous(a=_outcome,\n",
+    "        MI_UKBB[j] = _MI_continuous_SNP(a=_outcome,\n",
     "                                    b=_SNP,\n",
     "                                    a_min=a_min,\n",
     "                                    a_max=a_max,\n",
@@ -184,7 +192,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def binary_filter(bed_file, bim_file, fam_file, outcome, outcome_iid):\n",
+    "def binary_filter_plink(bed_file, bim_file, fam_file, outcome, outcome_iid):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -209,11 +217,11 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        MI_UKBB[j] = _MI_binary(a=_outcome, b=_SNP)\n",
+    "        MI_UKBB[j] = _MI_binary_SNP(a=_outcome, b=_SNP)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def continuous_filter_parallel(bed_file,\n",
+    "def continuous_filter_plink_parallel(bed_file,\n",
     "                               bim_file,\n",
     "                               fam_file,\n",
     "                               outcome,\n",
@@ -252,7 +260,7 @@
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
     "\n",
-    "    def _continuous_filter_slice(_slice):\n",
+    "    def _continuous_filter_plink_slice(_slice):\n",
     "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
     "        for j in _slice:\n",
@@ -260,7 +268,7 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            _MI_slice[k] = _MI_continuous(a=_outcome,\n",
+    "            _MI_slice[k] = _MI_continuous_SNP(a=_outcome,\n",
     "                                          b=_SNP,\n",
     "                                          a_min=a_min,\n",
     "                                          a_max=a_max,\n",
@@ -271,13 +279,13 @@
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
     "    with _mp.Pool(core_num) as pl:\n",
-    "        MI_UKBB = pl.map(_continuous_filter_slice,\n",
+    "        MI_UKBB = pl.map(_continuous_filter_plink_slice,\n",
     "                         _np.array_split(ind, core_num * multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def binary_filter_parallel(bed_file,\n",
+    "def binary_filter_plink_parallel(bed_file,\n",
     "                           bim_file,\n",
     "                           fam_file,\n",
     "                           outcome,\n",
@@ -309,7 +317,7 @@
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
     "\n",
-    "    def _binary_filter_slice(_slice):\n",
+    "    def _binary_filter_plink_slice(_slice):\n",
     "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
     "        for j in _slice:\n",
@@ -317,17 +325,33 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            _MI_slice[k] = _MI_binary(a=_outcome, b=_SNP)\n",
+    "            _MI_slice[k] = _MI_binary_SNP(a=_outcome, b=_SNP)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
     "    with _mp.Pool(core_num) as pl:\n",
-    "        MI_UKBB = pl.map(_binary_filter_slice,\n",
+    "        MI_UKBB = pl.map(_binary_filter_plink_slice,\n",
     "                         _np.array_split(ind, core_num * multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
-    "    return MI_UKBB"
+    "    return MI_UKBB\n",
+    "\n",
+    "def binary_filter_csv():\n",
+    "    pass\n",
+    "    return \n",
+    "\n",
+    "def continuous_filter_csv():\n",
+    "    pass\n",
+    "    return \n",
+    "\n",
+    "def binary_filter_csv_parallel():\n",
+    "    pass\n",
+    "    return\n",
+    "\n",
+    "def continuous_filter_csv_parallel():\n",
+    "    pass\n",
+    "    return\n"
    ]
   },
   {
@@ -414,7 +438,7 @@
     "outcome = outcome[iid_ind]\n",
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
-    "MI_continuous = continuous_filter_parallel(bed_file=bed_file,\n",
+    "MI_continuous = continuous_filter_plink_parallel(bed_file=bed_file,\n",
     "                                           bim_file=bim_file,\n",
     "                                           fam_file=fam_file,\n",
     "                                           a_min=np.min(outcome) - 10,\n",
@@ -483,7 +507,7 @@
     "outcome = outcome[iid_ind]\n",
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
-    "MI_binary = binary_filter_parallel(bed_file=bed_file,\n",
+    "MI_binary = binary_filter_plink_parallel(bed_file=bed_file,\n",
     "                                   bim_file=bim_file,\n",
     "                                   fam_file=fam_file,\n",
     "                                   outcome=outcome,\n",
